--- a/lms/static/sass/course/instructor/_instructor_2.scss
+++ b/lms/static/sass/course/instructor/_instructor_2.scss
@@ -537,7 +537,7 @@
     }
   }
 
-  // create or edit cohort group
+  // create or edit cohort
   .cohort-management-settings,
   .cohort-management-edit {
     @extend %cohort-management-form;
@@ -560,7 +560,7 @@
     }
   }
 
-  // cohort group
+  // cohort
   .cohort-management-group-header {
     padding: $baseline;
     border-bottom: ($baseline/10) solid $gray-l4;
