--- a/lms/templates/discussion/_underscore_templates.html
+++ b/lms/templates/discussion/_underscore_templates.html
@@ -4,309 +4,11 @@
 
 <%namespace name='static' file='../static_content.html'/>
 
-## IMPORTANT: In order to keep js tests valid and relevant, please be sure to update the appropriate HTML in
-## common/static/coffee/spec/discussion_spec_helper.coffee is changed and regenerated, whenever this one changes.
-<script aria-hidden="true" type="text/template" id="thread-template">
-    <article class="discussion-article" data-id="${'<%- id %>'}">
-        <div class="thread-wrapper">
-            <div class="forum-thread-main-wrapper">
-                <div class="thread-content-wrapper"></div>
-                <div class="post-extended-content">
-                    <ol class="responses js-marked-answer-list"></ol>
-                </div>
-            </div>
-            <div class="post-extended-content">
-                <div class="response-count"/>
-                <div class="add-response">
-                    <button class="button add-response-btn">
-                        <i class="icon fa fa-reply"></i>
-                        <span class="add-response-btn-text">${_('Add A Response')}</span>
-                    </button>
-                </div>
-                <ol class="responses js-response-list"/>
-                <div class="response-pagination"/>
-                <div class="post-status-closed bottom-post-status" style="display: none">
-                  ${_("This thread is closed.")}
-                </div>
-                % if course is UNDEFINED or has_permission(user, 'create_comment', course.id):
-                <form class="discussion-reply-new" data-id="${'<%- id %>'}">
-                    <h4>${_("Post a response:")}</h4>
-                    <ul class="discussion-errors"></ul>
-                    <div class="reply-body" data-id="${'<%- id %>'}"></div>
-                    <div class="reply-post-control">
-                        <a class="discussion-submit-post control-button" href="#">${_("Submit")}</a>
-                    </div>
-                </form>
-                % endif
-            </div>
-        </div>
-        <div class="post-tools">
-            <a href="javascript:void(0)" class="forum-thread-expand"><span class="icon fa fa-plus"/> ${_("Expand discussion")}</a>
-            <a href="javascript:void(0)" class="forum-thread-collapse"><span class="icon fa fa-minus"/> ${_("Collapse discussion")}</a>
-        </div>
-    </article>
-</script>
-
-% for template_name in ['thread-show']:
+% for template_name in ['thread', 'thread-show', 'thread-edit', 'thread-response', 'thread-response-show', 'thread-response-edit', 'response-comment-show', 'response-comment-edit', 'thread-list-item']:
 <script aria-hidden="true" type="text/template" id="${template_name}-template">
     <%static:include path="js/discussion/${template_name}.underscore" />
 </script>
 % endfor
-
-<script aria-hidden="true" type="text/template" id="thread-edit-template">
-    <h1>${_("Editing post")}</h1>
-    <ul class="post-errors"></ul>
-    <div class="forum-edit-post-form-wrapper"></div>
-    <div class="form-row">
-      <label class="sr" for="edit-post-title">${_("Edit post title")}</label>
-      <input type="text" id="edit-post-title" class="edit-post-title" name="title" value="${"<%-title %>"}" placeholder="${_('Title') | h}">
-    </div>
-    <div class="form-row">
-      <div class="edit-post-body" name="body">${"<%- body %>"}</div>
-    </div>
-    <input type="submit" id="edit-post-submit" class="post-update" value="${_("Update post") | h}">
-    <a href="#" class="post-cancel">${_("Cancel")}</a>
-</script>
-
-<script aria-hidden="true" type="text/template" id="thread-response-template">
-    <div class="discussion-response"></div>
-    <a href="#" class="action-show-comments">
-        ${u"<%- interpolate('{}', {{num_comments: comments.length}}, true) %>".format(escapejs(_("Show Comments (%(num_comments)s)")))}
-        <i class="icon fa fa-caret-down"></i>
-    </a>
-    <ol class="comments">
-        <li class="new-comment">
-            % if course is UNDEFINED or has_permission(user, 'create_sub_comment', course.id):
-            <form class="comment-form" data-id="${'<%- wmdId %>'}">
-                <ul class="discussion-errors"></ul>
-                <label class="sr" for="add-new-comment">${_("Add a comment")}</label>
-                <div class="comment-body" id="add-new-comment" data-id="${'<%- wmdId %>'}"
-                data-placeholder="${_('Add a comment...') | h}"></div>
-                <div class="comment-post-control">
-                    <a class="discussion-submit-comment control-button" href="#">${_("Submit")}</a>
-                </div>
-            </form>
-            % endif
-        </li>
-    </ol>
-</script>
-
-<script aria-hidden="true" type="text/template" id="thread-response-show-template">
-    <header>
-      <div class="response-header-content">
-        ${'<%= author_display %>'}
-        <p class="posted-details">
-            <span class="timeago" title="${'<%= created_at %>'}">${'<%= created_at %>'}</span>
-            <%
-            js_block = u"""
-                interpolate(
-                    thread.get("thread_type") == "question" ?
-                      (endorsement.username ? "{question_user_fmt_str}" : "{question_anon_fmt_str}") :
-                      (endorsement.username ? "{discussion_user_fmt_str}" : "{discussion_anon_fmt_str}"),
-                    {{
-                        'time_ago': '<span class="timeago" title="' + endorsement.time + '">' + endorsement.time + '</span>',
-                        'user': endorser_display
-                    }},
-                    true
-                )""".format(
-                    ## Translators: time_ago is a placeholder for a fuzzy, relative timestamp
-                    ## like "4 hours ago" or "about a month ago"
-                    question_user_fmt_str=escapejs(_("marked as answer %(time_ago)s by %(user)s")),
-                    ## Translators: time_ago is a placeholder for a fuzzy, relative timestamp
-                    ## like "4 hours ago" or "about a month ago"
-                    question_anon_fmt_str=escapejs(_("marked as answer %(time_ago)s")),
-                    ## Translators: time_ago is a placeholder for a fuzzy, relative timestamp
-                    ## like "4 hours ago" or "about a month ago"
-                    discussion_user_fmt_str=escapejs(_("endorsed %(time_ago)s by %(user)s")),
-                    ## Translators: time_ago is a placeholder for a fuzzy, relative timestamp
-                    ## like "4 hours ago" or "about a month ago"
-                    discussion_anon_fmt_str=escapejs(_("endorsed %(time_ago)s")),
-                )
-            %>
-              ${"<% if (obj.endorsement) { %> - <%="}${js_block}${"%><% } %>"}
-          </p>
-          <div class="post-labels">
-              <span class="post-label-reported"><i class="icon fa fa-flag"></i>${_("Reported")}</span>
-          </div>
-          </div>
-          <div class="response-header-actions">
-            ${"""<%=
-                _.template(
-                    $('#forum-actions').html(),
-                    {
-                        contentId: cid,
-                        contentType: 'response',
-                        primaryActions: ['vote', thread.get('thread_type') == 'question' ? 'answer' : 'endorse'],
-                        secondaryActions: ['edit', 'delete', 'report']
-                    }
-                )
-            %>"""}
-          </div>
-    </header>
-
-    <div class="response-body">${"<%- body %>"}</div>
-</script>
-
-<script aria-hidden="true" type="text/template" id="thread-response-edit-template">
-  <div class="edit-post-form">
-    <h1>${_("Editing response")}</h1>
-    <ul class="edit-post-form-errors"></ul>
-    <div class="form-row">
-      <div class="edit-post-body" name="body" data-id="${'<%- id %>'}">${"<%- body %>"}</div>
-    </div>
-    <input type="submit" id="edit-response-submit"class="post-update" value="${_("Update response") | h}">
-    <a href="#" class="post-cancel">${_("Cancel")}</a>
-  </div>
-</script>
-
-<script aria-hidden="true" type="text/template" id="response-comment-show-template">
-  <div id="comment_${'<%- id %>'}">
-    <div class="response-body">${'<%- body %>'}</div>
-    ${"""<%=
-        _.template(
-            $('#forum-actions').html(),
-            {
-                contentId: cid,
-                contentType: 'comment',
-                primaryActions: [],
-                secondaryActions: ['edit', 'delete', 'report']
-            }
-        )
-    %>"""}
-    <%
-    js_block = u"""
-      interpolate(
-        '{}',
-        {{'time_ago': '<span class=\"timeago\" title=\"' + created_at + '\">' + created_at + '</span>', 'author': author_display}},
-        true
-      )""".format(
-        ## Translators: 'timeago' is a placeholder for a fuzzy, relative timestamp (see: https://github.com/rmm5t/jquery-timeago)
-        escapejs(_('posted %(time_ago)s by %(author)s'))
-      )
-    %>
-    <p class="posted-details">
-    ${'<%='}${js_block}${'%>'}
-    </p>
-    <div class="post-labels">
-      <span class="post-label-reported"><i class="icon fa fa-flag"></i>${_("Reported")}</span>
-    </div>
-  </div>
-</script>
-
-<script aria-hidden="true" type="text/template" id="response-comment-edit-template">
-  <div class="edit-post-form" id="comment_${'<%- id %>'}">
-    <h1>${_("Editing comment")}</h1>
-    <ul class="edit-comment-form-errors"></ul>
-    <div class="form-row">
-      <div class="edit-comment-body" name="body" data-id="${'<%- id %>'}">${"<%- body %>"}</div>
-    </div>
-    <input type="submit" id="edit-comment-submit" class="post-update" value="${_("Update comment") | h}">
-    <a href="#" class="post-cancel">${_("Cancel")}</a>
-  </div>
-</script>
-
-<script aria-hidden="true" type="text/template" id="thread-list-item-template">
-  <li data-id="${'<%- id %>'}" class="forum-nav-thread${'<% if (typeof(read) != "undefined" && !read) { %> is-unread<% } %>'}">
-    <a href="#" class="forum-nav-thread-link">
-      <div class="forum-nav-thread-wrapper-0">
-        ${u"""<%
-        var icon_class, sr_text;
-        if (thread_type == "discussion") {{
-            icon_class = "fa-comments";
-            sr_text = "{discussion}";
-        }} else if (endorsed) {{
-            icon_class = "fa-check-square-o";
-            sr_text = "{answered_question}";
-        }} else {{
-            icon_class = "fa-question";
-            sr_text = "{unanswered_question}";
-        }}
-        %>""".format(
-            ## Translators: This is a label for a Discussion forum thread
-            discussion=escapejs(_("discussion")),
-            ## Translators: This is a label for a Question forum thread with a marked answer
-            answered_question=escapejs(_("answered question")),
-            ## Translators: This is a label for a Question forum thread without a marked answer
-            unanswered_question=escapejs(_("unanswered question"))
-        )}
-        <span class="sr">${"<%= sr_text %>"}</span>
-        <i class="icon fa ${"<%= icon_class %>"}"></i>
-      </div><div class="forum-nav-thread-wrapper-1">
-        <span class="forum-nav-thread-title">${"<%- title %>"}</span>
-        <%
-        js_block = u"""
-        var labels = "";
-        if (pinned) {{
-            labels += '<li class="post-label-pinned"><i class="icon fa fa-thumb-tack"></i>{pinned_text}</li> ';
-        }}
-        if (typeof(subscribed) != "undefined" && subscribed) {{
-            labels += '<li class="post-label-following"><i class="icon fa fa-star"></i>{following_text}</li> ';
-        }}
-        if (staff_authored) {{
-            labels += '<li class="post-label-by-staff"><i class="icon fa fa-user"></i>{staff_text}</li> ';
-        }}
-        if (community_ta_authored) {{
-            labels += '<li class="post-label-by-community-ta"><i class="icon fa fa-user"></i>{community_ta_text}</li> ';
-        }}
-        if (labels != "") {{
-            print('<ul class="forum-nav-thread-labels">' + labels + '</ul>');
-        }}
-        """.format(
-            ## Translators: This is a label for a forum thread that has been pinned
-            pinned_text=escapejs(_("Pinned")),
-            ## Translators: This is a label for a forum thread that the user is subscribed to
-            following_text=escapejs(_("Following")),
-            ## Translators: This is a label for a forum thread that was authored by a member of the course staff
-            staff_text=escapejs(_("By: Staff")),
-            ## Translators: This is a label for a forum thread that was authored by a community TA
-            community_ta_text=escapejs(_("By: Community TA"))
-        )
-         %>
-        ${"<%"}${js_block}${"%>"}
-      </div><div class="forum-nav-thread-wrapper-2">
-        <%
-        js_block = u"""
-            interpolate(
-                '{}',
-                {{'span_sr_open': '<span class=\"sr\">', 'span_close': '</span>', 'votes_up_count': votes['up_count']}},
-                true
-                )
-        """.format(
-                ## Translators: 'votes_up_count' is a numerical placeholder for a specific discussion thread; 'span_*' placeholders refer to HTML markup.  Please translate the word 'votes'.
-                escapejs( _('%(votes_up_count)s%(span_sr_open)s votes %(span_close)s'))
-            )
-        %>
-        <span class="forum-nav-thread-votes-count">+${'<%='}${js_block}${'%>'}</span>
-        <%
-        js_block =  u"""
-        var fmt;
-        // Counts in data do not include the post itself, but the UI should
-        var data = {{
-            'span_sr_open': '<span class=\"sr\">',
-            'span_close': '</span>',
-            'unread_comments_count': unread_comments_count + (read ? 0 : 1),
-            'comments_count': comments_count + 1
-            }};
-        if (unread_comments_count > 0) {{
-            fmt = '{markup_with_unread}';
-        }} else {{
-            fmt = '{markup_none_unread}';
-        }}
-        print(interpolate(fmt, data, true));
-        """.format(
-                ## Translators: 'comments_count' and 'unread_comments_count' are numerical placeholders for a specific discussion thread; 'span_*' placeholders refer to HTML markup.  Please translate the word 'comments'.
-                markup_with_unread=escapejs(_('%(comments_count)s %(span_sr_open)scomments (%(unread_comments_count)s unread comments)%(span_close)s')),
-                ## Translators: 'comments_count' is a numerical placeholder for a specific discussion thread; 'span_*' placeholders refer to HTML markup.  Please translate the word 'comments'.
-                markup_none_unread=escapejs(_('%(comments_count)s %(span_sr_open)scomments %(span_close)s'))
-            )
-        %>
-        <span class="forum-nav-thread-comments-count ${'<% if (unread_comments_count > 0) { %>is-unread<% } %>'}">
-            ${'<%'}${js_block}${'%>'}
-        </span>
-      </div>
-    </a>
-  </li>
-</script>
 
 <script aria-hidden="true" type="text/template" id="discussion-home">
   <div class="discussion-article blank-slate">
